chore: ensure fields are scrollable on mobile

--- a/packages/core/plugins/fields/styles.module.css
+++ b/packages/core/plugins/fields/styles.module.css
@@ -1,6 +1,7 @@
 .FieldsPlugin {
   background: white;
-  min-height: 100%;
+  height: 100%;
+  overflow-y: auto;
 }
 
 .FieldsPlugin-header {
